k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vortex-client
  labels:
    name: vortex-client
    tier: frontend
